[gd_scene load_steps=18 format=3 uid="uid://bnkf74t42qvte"]

[ext_resource type="PackedScene" uid="uid://t8yoilo4plm7" path="res://Scenes/Enemy/enemy.tscn" id="1_sd8jl"]
[ext_resource type="Texture2D" uid="uid://bm8lmgpqd75fd" path="res://assets/GameDevTavern - BeatEmUp Assets/assets/art/characters/enemy_punk.png" id="2_b5gwv"]
[ext_resource type="Script" uid="uid://d051ph8lciomm" path="res://Scripts/Enemy/BaseEnemy/base_enemy.gd" id="2_juno1"]
[ext_resource type="Texture2D" uid="uid://dbrp4yhgse1xp" path="res://assets/GameDevTavern - BeatEmUp Assets/assets/art/characters/shadow.png" id="3_1ogfx"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_1ogfx"]
radius = 2.0
height = 12.0

[sub_resource type="Animation" id="Animation_pxb0l"]
resource_name = "Fall"
length = 0.1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CharacterSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [51]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ColleteralDamageEmitter:monitoring")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_q8188"]
resource_name = "Grounded"
length = 0.1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CharacterSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [52]
}

[sub_resource type="Animation" id="Animation_kc64v"]
resource_name = "Hurt"
length = 0.15
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CharacterSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.07, 0.14),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [40, 41, 42]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.15),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"on_action_complete"
}]
}

[sub_resource type="Animation" id="Animation_1ogfx"]
resource_name = "Idle"
length = 0.1
loop_mode = 1
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CharacterSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_vpdj2"]
resource_name = "Land"
length = 0.1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CharacterSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [70]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"on_land_complete"
}]
}

[sub_resource type="Animation" id="Animation_juno1"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CharacterSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ColleteralDamageEmitter:monitoring")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_xs8vn"]
resource_name = "Walk"
length = 0.8
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CharacterSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [10, 11, 12, 13, 14, 15, 16, 17]
}

[sub_resource type="Animation" id="Animation_kabpg"]
resource_name = "Fly"
length = 0.1
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CharacterSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [50]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ColleteralDamageEmitter:monitoring")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_juno1"]
_data = {
&"Fall": SubResource("Animation_pxb0l"),
&"Fly": SubResource("Animation_kabpg"),
&"Grounded": SubResource("Animation_q8188"),
&"Hurt": SubResource("Animation_kc64v"),
&"Idle": SubResource("Animation_1ogfx"),
&"Land": SubResource("Animation_vpdj2"),
&"RESET": SubResource("Animation_juno1"),
&"Walk": SubResource("Animation_xs8vn")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_juno1"]
size = Vector2(6, 6)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xs8vn"]
size = Vector2(10, 10)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pxb0l"]
size = Vector2(6, 6)

[node name="BaseEnemy" node_paths=PackedStringArray("Fall_Timer") instance=ExtResource("1_sd8jl")]
collision_layer = 4
collision_mask = 20
script = ExtResource("2_juno1")
Health = 20
Speed = 20
Flight_Velocity = 100
knockback_force = 10
knockdown_force = 80
Fall_Timer = NodePath("Timers/FallTimer")

[node name="CollisionShape2D" parent="." index="0"]
position = Vector2(0, -1)
rotation = 1.5707964
shape = SubResource("CapsuleShape2D_1ogfx")

[node name="CharacterSprite" parent="." index="1"]
texture = ExtResource("2_b5gwv")
offset = Vector2(0, -24)
hframes = 10
vframes = 10

[node name="ShadowSprite" parent="." index="2"]
position = Vector2(0, 1)
texture = ExtResource("3_1ogfx")

[node name="AnimationPlayer" parent="." index="3"]
libraries = {
&"": SubResource("AnimationLibrary_juno1")
}

[node name="DamageEmitter" parent="." index="4"]
collision_mask = 96

[node name="CollisionShape2D" parent="DamageEmitter" index="0"]
position = Vector2(8, -14)
shape = SubResource("RectangleShape2D_juno1")

[node name="DamageReceiver" parent="." index="5" node_paths=PackedStringArray("Parent")]
collision_layer = 64
Parent = NodePath("..")

[node name="CollisionShape2D" parent="DamageReceiver" index="0"]
position = Vector2(1, -19)
shape = SubResource("RectangleShape2D_xs8vn")

[node name="FallTimer" parent="Timers" index="0"]
wait_time = 3.0

[node name="ColleteralDamageEmitter" parent="." index="7"]
collision_mask = 320

[node name="CollisionShape2D2" type="CollisionShape2D" parent="ColleteralDamageEmitter" index="1"]
position = Vector2(0, -11)
shape = SubResource("RectangleShape2D_pxb0l")

[connection signal="timeout" from="Timers/FallTimer" to="." method="_on_fall_timer_timeout"]

[editable path="DamageEmitter"]
[editable path="DamageReceiver"]
